Fix extra line break in the sports section

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -18,7 +18,11 @@
     transition: all ease-in-out 300ms;
     &:hover{
       box-shadow:0px 37px 18px -20px $metal;
-      transform: translate(0px, -10px)
+      -webkit-transform: translate(0px, -10px);
+      -moz-transform: translate(0px, -10px);
+      -ms-transform: translate(0px, -10px);
+      -o-transform: translate(0px, -10px);
+      transform: translate(0px, -10px);
     }
     .date{
     font-size: .9em;
@@ -222,6 +226,18 @@
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+    box-shadow:0px 17px 20px -10px $metal;
+    cursor: pointer;
+    transition: all ease-in-out 300ms;
+    &:hover{
+      box-shadow:0px 37px 18px -20px $metal;
+      -webkit-transform: translate(0px, -10px);
+      -moz-transform: translate(0px, -10px);
+      -ms-transform: translate(0px, -10px);
+      -o-transform: translate(0px, -10px);
+      transform: translate(0px, -10px);
+
+    }
     .date{
     font-size: .9em;
     margin: 0;
